test(mica-voice-example): 重构 Spring Boot starter 测试为 ApplicationContextRunner
- 用 ApplicationContextRunner 替代 SpringBootTest 以简化测试
- 验证 mica-voice-spring-boot-starter 自动装配的核心属性 Bean 是否存在
- 增加内部配置类以启用 MicaVoiceProperties 绑定
- 优化 mica-voice-core 中 AudioReadersTest 的文件写入方式，确保写入 UTF-8 编码
- 修正 mica-voice-core pom 中 lombok 依赖范围为 provided
- 更新 mica-voice-core 中 junit-jupiter 版本至 5.14.4
- mica-voice-spring-boot-starter pom 中优化依赖声明，添加 spring-boot-autoconfigure
- 统一 pom 文件中 lombok 依赖范围为 provided
- 更新顶层 pom 文件中 maven-surefire-plugin 版本及配置，解决部分测试兼容性问题
- docs 中补充模型下载脚本关于镜像和官方源切换的说明
- SpeakerConfig 类增加 modelCandidates 字段 getter，避免直接暴露数组引用